# giveawayy

./: manage.py  pyproject.toml
accounts/: backends.py  forms.py  managers.py  models.py  tasks.py  tokens.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_user_model.py
core/: views.py
giveaway_config/: asgi.py  settings.py  urls.py  wsgi.py
giveaway_config/settings/: development.py
giveaways/: apps.py  context_processors.py  decorators.py  enums.py  forms.py  managers.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
giveaways/migrations/: 0001_initial.py  0002_add_constraint_to_account_number_and_bank.py  0003_add_is_eligible_column_to_participant_model.py  0004_remove_constraint_on_participant_model.py  0005_add_recipient_code_column.py
giveaways/templatetags/: giveaway.py
payments/: enums.py  middleware.py  models.py  services.py  tasks.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_change_default_status.py  0003_add_gateway_response_column_status.py  0004_update_transaction_status_enum.py
templates/: base.html  index.html
templates/accounts/: forgot_password.html  login.html  registration.html  reset_password.html
templates/accounts/emails/: account_activation.html  reset_password_mail.html
templates/giveaways/: create.html  join.html  search.html  view.html
